@@ -746,11 +746,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="group" ref="group_admin"/>
         </record>
 
-        <record model="res.request.link" id="request_link_cron">
-            <field name="name">Scheduler</field>
-            <field name="model">ir.cron</field>
-        </record>
-
         <record model="ir.ui.view" id="sequence_type_view_form">
           <field name="model">ir.sequence.type</field>
           <field name="inherit" ref="ir.sequence_type_view_form"/>
