@@ -1,15 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tree string="Requests">
-    <field name="create_date"/>
-    <field name="act_from"/>
-    <field name="act_to"/>
-    <field name="name"/>
-    <field name="priority"/>
-    <field name="trigger_date"/>
-    <field name="number_references"/>
-    <field name="state"/>
-    <field name="active"/>
-    <field name="body" tree_invisible="1"/>
-</tree>
